samples/_failures_safe/1761432455_c6d844_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b921a4ce.c: In function ‘main’:
./samples/SAFE/__tmp_b921a4ce.c:148:12: error: missing terminating " character
  148 |     printf("Enter text to analyze (max
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b921a4ce.c:148:5: error: expected expression at end of input
  148 |     printf("Enter text to analyze (max
      |     ^~~~~~
./samples/SAFE/__tmp_b921a4ce.c:148:5: error: expected declaration or statement at end of input
